app/globals.css
@import url('https://fonts.cdnfonts.com/css/proxima-nova-2');

:root {
  --max-width: 1100px;
  --border-radius: 12px;
  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;

  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;

  --primary-glow: conic-gradient(
    from 180deg at 50% 50%,
    #16abff33 0deg,
    #0885ff33 55deg,
    #54d6ff33 120deg,
    #0071ff33 160deg,
    transparent 360deg
  );
  --secondary-glow: radial-gradient(
    rgba(255, 255, 255, 1),
    rgba(255, 255, 255, 0)
  );

  --tile-start-rgb: 239, 245, 249;
  --tile-end-rgb: 228, 232, 233;
  --tile-border: conic-gradient(
    #00000080,
    #00000040,
    #00000030,
    #00000020,
    #00000010,
    #00000010,
    #00000080
  );

  --callout-rgb: 238, 240, 241;
  --callout-border-rgb: 172, 175, 176;
  --card-rgb: 180, 185, 188;
  --card-border-rgb: 131, 134, 135;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;

    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
    --secondary-glow: linear-gradient(
      to bottom right,
      rgba(1, 65, 255, 0),
      rgba(1, 65, 255, 0),
      rgba(1, 65, 255, 0.3)
    );

    --tile-start-rgb: 2, 13, 46;
    --tile-end-rgb: 2, 5, 19;
    --tile-border: conic-gradient(
      #ffffff80,
      #ffffff40,
      #ffffff30,
      #ffffff20,
      #ffffff10,
      #ffffff10,
      #ffffff80
    );

    --callout-rgb: 20, 20, 20;
    --callout-border-rgb: 108, 108, 108;
    --card-rgb: 100, 100, 100;
    --card-border-rgb: 200, 200, 200;
  }
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  font-family: 'Proxima Nova', sans-serif;
                                                
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
  font-family: 'Proxima Nova';
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
    font-family: 'Proxima Nova', sans-serif;
                                                
    background: none;
}

a {
  color: inherit;
  text-decoration: none;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

.nav-wrap {
  display: flex;
  justify-content: space-around;
}
.logo {
  margin-top: 22px;
  width: 147px;
  height: 82px;
}
.connect-btn {
border: 1px solid #E3E3E3;
border-radius: 16.5px;
width: 119px;
height: 39px;
margin-top: 51px;
background: none;
cursor: pointer;
}
.connect-btn:hover {
  border: 1px solid #26489E;
  background: #26489E;
  box-shadow: 0px 8px 16px rgba(12, 77, 174, 0.3);
}
.main {
  display: flex;
justify-content: center;
  align-items: center;
  padding: 4rem;
  font-family: 'Proxima Nova';
  /* background: #1E1E1E; */
}
.container {
  width: 287px;
/* height: 30px; */
background: rgba(45, 44, 44, 0.3);
border-radius: 10px;
}
.tab-flex {
display: flex;
justify-content: space-between;
margin-left: 25.5px;
}
.swap-text {
  margin: 26.5px 0 36.5px 0;
  font-family: 'Proxima Nova';
font-style: normal;
font-weight: 700;
font-size: 14px;
line-height: 17px;
} 
.menu-icon {
  margin: 24px 27.5px 0 0;
}
.first-token {
  display: flex;
  justify-content: space-between;
  margin-left: 24px;
}
.token{
  font-family: 'Proxima Nova';
font-weight: 700;
font-size: 14px;
line-height: 17px;
}
.token_equivalent {
  font-weight: 400;
font-size: 12px;
line-height: 15px;
color: #B8B8B8;
margin-top: 2px;
}
.first-token-btn {
  border: 1px solid #ECECEC;
filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.15));
border-radius: 17px;
display: flex;
width: 103px;
margin: 0 23px 0 0;
background: none;
}
.ETH {
  margin: 7px 5px 6px 13px;
}
.eth-text {
  font-weight: 700;
  font-size: 14px;
  line-height: 17px;
  margin: 9px 12.43px 0 0;
}
.arrow {
  margin-top: 12.95px;
}
.break-flex {
  display: flex;
}
.first-line {
  width: 112px;
  margin: 36px 2px 36px 20px;
  height: 0;
  color: #FFFFFF;
border: 1px solid rgba(255, 255, 255, 0.46);
}
.convert {
margin: 25px 2px 0 0;
}
.sec-line {
  width: 112px;
  margin: 36px 0px 0 0px;
  height: 0;
  color: #FFFFFF;
border: 1px solid rgba(255, 255, 255, 0.46);
}
.swap-connect-btn {
  width: 248px;
height: 51px;
border: 1px solid #26489E;
background: #26569E;
box-shadow: 0px 8px 16px rgba(12, 77, 174, 0.3);
border-radius: 10px;
font-weight: 700;
font-size: 16px;
line-height: 19px;
color: #FFFFFF;
margin:31px 0 30px 20px ;
cursor: pointer;
}
.swap-connect-btn:hover {
  border: 1px solid #224396;
  background: #224396;
}
.estimate-group {
  border: 1px solid #FFFFFF;
border-radius: 10px;
margin: 0 21px 22px 22px;
}
.estim {
  margin: 24px 0 0 23px;
}
.estimate-flex {
  display: flex;
  justify-content: space-between;
}
.estim-text {
  font-weight: 400;
font-size: 12px;
line-height: 15px;
}
.estim-no {
  display: flex;
  margin-right: 26px;
}
.equiv {
  margin: 8px 5.67px 0 0;
}
.estim-num {
  font-weight: 700;
  font-size: 12px;
  line-height: 15px;
  color: #FFFFFF;
}
#estim-id {
  margin-top: 23px;
}
.estim-text-flex {
  display: flex;
}
.save {
  font-weight: 400;
font-size: 12px;
line-height: 15px;

}
.note{
  margin: 3px 0 0 4.67px;
}
.tick {
      margin: 2px 3px 0 0;
}
.estimate-flex1 {
  display: flex;
  justify-content: space-between;
  margin-bottom: 24px;
}
#select-id {
  margin: 0 23px 0 0;
}
#selectdiv-id {
  background-color: transparent;
}
.input {
  width: 30px;
  border: none;
  outline: none;
  background: none;
  font-family: 'Proxima Nova';
  font-weight: 700;
  font-size: 14px;
  line-height: 17px;
}

